[project]
name = "usenet-comp-lang-cobol"
version = "0.1.0"
description = "Pipeline that converts the comp.lang.cobol Usenet archive into browsable Markdown/web data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sean McBride" }]
dependencies = [
  "python-dateutil",
]

[project.optional-dependencies]
dev = [
  "playwright",
  "pytest>=8.0",
  "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "archive", "authors", "build", "convert", "export_json", "links",
  "scrape_gap", "spam", "stats", "subjects", "thread", "topics", "utils", "years",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["markdown", "web"]

[tool.ruff.lint]
select = ["E9", "F821", "F822", "F823"]
